--- a/package.yaml
+++ b/package.yaml
@@ -33,7 +33,7 @@ dependencies:
 - typerep-map >= 0.3
 - protolude >= 0.2
 - streamly >= 0.5
-# - generic-lens >= 1.0
+- generic-lens >= 1.1
 - transformers >= 0.5
 - text >= 0.2
 - concurrent-state >= 0.6
@@ -73,6 +73,7 @@ default-extensions:
   - MultiWayIf
   - NamedFieldPuns
   - OverloadedStrings
+  - OverloadedLabels
   - PartialTypeSignatures
   - PatternGuards
   - PolyKinds
