--- a/package.yaml
+++ b/package.yaml
@@ -35,6 +35,7 @@ dependencies:
 - streamly >= 0.5
 - generic-lens >= 1.1
 - transformers >= 0.5
+- mtl >= 2.2
 - text >= 0.2
 - concurrent-state >= 0.6
 - monad-log >= 0.1
@@ -94,11 +95,11 @@ default-extensions:
   - StandaloneDeriving
   - TupleSections
   - TypeFamilies
-  - TypeApplications
   - TypeSynonymInstances
   - ViewPatterns
   - DuplicateRecordFields
   - TypeOperators
+  - TypeApplications
 
 tests:
   yet-another-haskell-discord-library-test:
