--- a/package.yaml
+++ b/package.yaml
@@ -29,7 +29,6 @@ dependencies:
 - http-types >= 0.12
 - aeson >= 1.4
 - lens-aeson >= 1.0
-- freer-simple >= 1.2
 - typerep-map >= 0.3
 - protolude >= 0.2
 - streamly >= 0.5
@@ -49,6 +48,7 @@ dependencies:
 - hashable >= 1.2
 - retry >= 0.7
 - time >= 1.8  # aeson dep
+- unordered-containers >= 0.2
 
 library:
   ghc-options:
