--- a/package.yaml
+++ b/package.yaml
@@ -31,7 +31,7 @@ dependencies:
 - lens-aeson >= 1.0
 - typerep-map >= 0.3
 - protolude >= 0.2
-- streamly >= 0.5
+- streamly >= 0.6
 - generic-lens >= 1.1
 - transformers >= 0.5
 - mtl >= 2.2
@@ -51,6 +51,9 @@ dependencies:
 - unordered-containers >= 0.2
 - http-date >= 0.0.8
 - bytestring >= 0.10
+- monad-control >= 1.0
+- transformers-base >= 0.4
+- async >= 2.2
 
 library:
   ghc-options:
