--- a/package.yaml
+++ b/package.yaml
@@ -55,6 +55,7 @@ dependencies:
 - async >= 2.2
 - simple-log >= 0.9
 - scientific >= 0.3
+- ekg >= 0.4
 
 executables:
   test-yadhl-exe:
@@ -63,7 +64,7 @@ executables:
     ghc-options:
       - -threaded
       - -rtsopts
-      - -with-rtsopts=-N
+      - -with-rtsopts=-T
       - -O3
     dependencies:
       - yet-another-haskell-discord-library
