--- a/calamity.cabal
+++ b/calamity.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: f4ce46e9e7dc89ecaad61b19e705dcd70e1b24adc9098c1fe66ac778203b9963
+-- hash: a84e4a11e45982391d015ea941f06feec38343d3501ee075adb30e9c59e8df88
 
 name:           calamity
 version:        0.1.0.0
@@ -42,12 +42,14 @@ library
       Calamity.HTTP.Request
       Calamity.HTTP.Route
       Calamity.HTTP.Types
+      Calamity.Types.FromChannel
       Calamity.Types.General
       Calamity.Types.MessageStore
       Calamity.Types.Snowflake
       Calamity.Types.SnowflakeMap
       Calamity.Types.Token
       Calamity.Types.UnixTimestamp
+      Calamity.Types.Updateable
       Prelude
   other-modules:
       Paths_calamity
